Refactor StorageRpc and Storage rewrite - Split StorageRpc.rewrite into openRewrite and continueRewrite - Add StorageRpc.RewriteResponse and RewriteRequest classe - Move first rewrite request from BlobRewriter to StorageImpl - Change maxBytesRewrittenPerCall to megabytesRewrittenPerCall - Change BlobWriter.blobSize for BigInteger to Long - BlobRewriter extends Restorable - Refactor tests and add StorageImpl unit tests